# mcp

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
python/: pyproject.toml
python/src/pullweights_mcp/: __init__.py  client.py  server.py
typescript/: package-lock.json  package.json
typescript/src/: client.ts  index.ts  types.ts
